0.16

0.15 2024-01-04T01:23:41+01:00
 - Fix doc.
 - Update copyright years.

0.14 2023-08-02T09:08:49+02:00
 - Add data_prepare() accessor for data initialization in prepare phase.

0.13 2023-07-18T15:25:37+02:00
 - Add tests for 'data' parameter.
 - Improve links in doc.
 - Update to Plack::Component::Tags::HTML@0.15.

0.12 2023-05-29T16:31:45+02:00
 - Place explicitly inherited _prepare_app(). There will be content in
   future.

0.11 2023-02-10T23:06:45+01:00
 - Fix doc and regen examples.
 - Update copyright years.
 - Update to new Plack::Component::Tags::HTML@0.12.

0.10 2023-02-09T11:58:28+01:00
 - Add test for 'data_init' accessor.
 - Add test for running with init() method without 'data_init' accessor.
 - Fix running with init() method without 'data_init' accessor.
 - Update to new Plack::Component::Tags::HTML.

0.09 2022-11-03T21:36:40+01:00
 - API change: Add 'data_init' accessor.

0.08 2022-10-20T11:15:43+02:00
 - API change: Add 'data_css' accessor.
 - Regen README file.

0.07 2022-08-16T13:19:57+02:00
 - API change: 'data' parameter was changed to reference to array of
   arguments for process().
 - Fix examples in doc.
 - Rename example files in examples/ directory to better names.

0.06 2022-07-24T22:23:31+02:00
 - Unify LICENSE AND COPYRIGHT section in doc.
 - Update minimal dependency to Plack::Component::Tags::HTML@0.06 with
   <viewport> element and fix test for this new version.

0.05 2022-05-13T18:14:17+02:00
 - Add image of example #1 web app to doc.
 - Fix minimal dependency for Plack::Component::Tags::HTML. For
   reproductible tests without title element.

0.04 2022-05-12T17:13:17+02:00
 - Add test with inline component.
 - Fix bugtracker url.
 - Update README.

0.03 2022-05-12T15:11:34+02:00
 - Add second example to doc.
 - Add support for inline package.
 - Fix test dependencies.

0.02 2022-05-11T10:19:13+02:00
 - Add ERRORS section to doc.
 - Add error check for component isa('Tags::HTML').
 - Fix copyright years.